2008-10-02  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/gccsupport.cxx (fwrite, fputc): New functions since GCC can
	now optimise certain builtins used by the libsupc++ runtime to
	these.

2008-07-10  Grant Edwards <grant.b.edwards@gmail.com>

        * src/diag.cxx: allow ASCII escape character in printf
        format strings.

2008-01-10  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/infra.cdl (CYGFUN_INFRA_EMPTY_DELETE_FUNCTIONS): Escape square
	brackets in description.	

2007-12-28  Oyvind Harboe <oyvind.harboe@zylin.com>
	
	* src/memcpy.cxx: added assert when memory areas for memcpy()
	overlaps => result is undefined. It is important to catch *all*
	cases of this if adding an optimisation for unaligned copy.
	
2007-06-28  Gary Thomas  <gary@mlbassoc.com>

	* src/tcdiag.cxx: 
	* src/diag.cxx: Add (char *) casts to make GCC 4.2.x happy.

2007-05-31  Rutger Hofman <rutger@cs.vu.nl>

	* src/diag.cxx: when printing a long long, should not truncate
	its value to a long or int size

2006-10-26  Stefan Sommerfeld <sommerfeld@mikrom.com>

	* include/cyg_types.h: fixed typo, __GNU_PATCHLEVEL__ was checked,
	should be __GNUC_PATCHLEVEL__ (which is already used later)
	* include/cyg_types.h: fixed comment for CYGBLD_ATTRIB_USED, wrong
	GCC version was referenced

2006-08-25  Gary Thomas  <gary@mlbassoc.com>

	* cdl/infra.cdl: 
	CYGNUM_INFRA_EMPTY_DELETE_THRESHOLD must be 'data', not 'boolean'

2006-05-17  David Vrabel <dvrabel@arcom.com>
 
	* include/cyg_type.h: #define CYG_NELEM to calculate the
 	number of elements in a (statically allocated) array.
 
2006-05-08  Sergei Gavrikov <sg@belvok.com>
	
	* src/buffer.cxx: Fix the compiler warnings.

2005-11-04  Bart Veer <bartv@ecoscentric.com>
	
	* tests/cxxsupp.cxx: Fix the compiler warnings.

2005-10-16  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/delete.cxx: 
	* cdl/infra.cdl: Count the number of calls to delete when
	INFRA_DEBUG is enabled. If the threshold is exceeded it probably